# wandb-voice-assistant

./: LICENSE  README.md  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
src/api/: app.py  models.py  routes.py
src/core/: config.py
src/core/agent/: llm_agent.py  memory.py  tools.py
src/services/: data_manager.py
